# bevy_dylan

./: .gitignore  Cargo.toml  README.md
assets/shaders/: distance_field_shapes.wgsl  easings.wgsl  neat_material.wgsl  sd_shapes.wgsl  shader_utils.wgsl
assets/shaders/fragment/: blue_flash.wgsl  circle.wgsl  color_blend.wgsl  color_grid.wgsl  color_polar.wgsl  easing_test.wgsl  lava_lamp.wgsl  marble_edge.wgsl  noise_gradient.wgsl  noise_value.wgsl  noise_voronoi.wgsl  rainbow.wgsl  random_static.wgsl  red.wgsl  red_flash.wgsl  red_flash_smooth.wgsl  red_flash_tangent.wgsl  sd_test_1.wgsl  (+10 more)
docs/: game_entity_design.ods  tools_available.ods
src/: events.rs  main.rs  resources.rs  style.rs  system_params.rs  systems.rs
src/config/: mod.rs  resources.rs
src/core/: mod.rs  resources.rs
src/game/: events.rs  mod.rs  systems.rs
src/materials/: blue_flash_material.rs  circle_material.rs  color_blend_material.rs  color_grid_material.rs  color_polar_material.rs  easing.rs  lava_lamp_material.rs  marble_edge_material.rs  mod.rs  noise_gradient_material.rs  noise_value_material.rs  noise_voronoi_material.rs  rainbow_material.rs  random_static.rs  red_flash_material.rs  red_flash_smooth_material.rs  red_flash_tangent_material.rs  red_material.rs  sd1_material.rs  sd2_material.rs  sd3_material.rs  sd4_material.rs  shape_collision_material.rs  shape_morph_material.rs  shapes_material.rs  swirly_material.rs  voronoi_smooth_material.rs  wipes_material.rs  wood_grain_material.rs
src/ui/: mod.rs
tools/polygon_convex_decomp/: CMakeLists.txt  optimal_poly_decomp.cpp
(+160 files in other folders)
