[package]
name = "bevy_dylan"
version = "0.1.0"
edition = "2021"
authors = [
    "dylanafterall <https://github.com/dylanafterall>",
]

[dependencies]
# remove bevy dynamic_linking feature for release builds
bevy = { version = "0.11.0", features = [
    "dynamic_linking",
    "trace",
    "detailed_trace",
    # "wgpu_trace",
    # "trace_chrome",
    "subpixel_glyph_atlas",
    "jpeg",
    "wav",
] }
bevy_rapier2d = { version = "0.22.0", features = [
    "debug-render-2d",
    "simd-nightly",
    "parallel",
    "serde-serialize",
] }
bevy-inspector-egui = "0.19.0"
bevy_hanabi = "0.7.0"
bevy_prototype_lyon = "0.9.0"
#big-brain
#bevy_spine
#leafwing_input_manager
#bevy_asset_loader
#bevy_tweening
#bevy_kira_audio

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# enable Link-Time-Optimization to squeeze out even more performance at the cost of very slow compile times
[profile.release]
lto = "thin"
codegen-units = 1